third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/transmute-ref-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `Src`
   |
note: required by `AssertSrcIsIntoBytes`
  --> tests/ui-msrv/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-msrv/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
